--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -22,7 +22,6 @@
             !${camel.osgi.export.pkg},
             org.apache.camel.*,
             org.apache.deltaspike.cdise.api;version="[1.1,2)";resolution:="optional",
-            org.apache.deltaspike.core.api.provider;version="[1.1,2)";resolution:="optional",
             *
         </camel.osgi.import.pkg>
         <camel.osgi.private.pkg>!*</camel.osgi.private.pkg>
@@ -41,15 +40,7 @@
             <artifactId>camel-core</artifactId>
         </dependency>
 
-        <!-- DeltaSpike is only used to provide Main support thus optional -->
-        <dependency>
-            <groupId>org.apache.deltaspike.core</groupId>
-            <artifactId>deltaspike-core-api</artifactId>
-            <version>${deltaspike.version}</version>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-
+        <!-- DeltaSpike container control is only used to provide Main support thus optional -->
         <dependency>
             <groupId>org.apache.deltaspike.cdictrl</groupId>
             <artifactId>deltaspike-cdictrl-api</artifactId>
